--- a/index.html
+++ b/index.html
@@ -15,23 +15,26 @@
   <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+
   <!-- Desktop Navigation -->
   <nav class="desktop-nav">
     <div class="nav-logo neu">
-      <img
+      <!-- object для SVG -->
+      <object
         id="nav-logo"
         class="nav-logo-img"
-        src="images/logo-light.svg"
-        data-light="images/logo-light.svg"
-        data-dark="images/logo-dark.svg"
-        alt="Sirko Club Logo">
+        type="image/svg+xml"
+        data="images/logo-light.svg"
+        aria-label="Sirko Club Logo">
+      </object>
       <span class="nav-logo-text">Sirko Club</span>
     </div>
     <ul class="nav-items">
-      <li><a class="neu nav-link" href="#expenses">Форма витрат</a></li>
-      <li><a class="neu nav-link" href="#map">Карта клієнта</a></li>
-      <li><a class="neu nav-link" href="#staff">Персонал</a></li>
-      <li><a class="neu nav-link" href="#reports">Звіти</a></li>
+      <li><a class="neu nav-link" href="#hero">Головна</a></li>
+      <li><a class="neu nav-link" href="#features">Інструменти</a></li>
+      <li><a class="neu nav-link" href="#gallery">Галерея</a></li>
+      <li><a class="neu nav-link" href="#testimonials">Відгуки</a></li>
+      <li><a class="neu nav-link" href="#contact">Контакти</a></li>
     </ul>
   </nav>
 
@@ -41,10 +44,11 @@
   </button>
   <nav id="mobile-nav" class="mobile-nav neu" aria-label="Мобільна навігація">
     <ul>
-      <li><a class="nav-link" href="#expenses">Форма витрат</a></li>
-      <li><a class="nav-link" href="#map">Карта клієнта</a></li>
-      <li><a class="nav-link" href="#staff">Персонал</a></li>
-      <li><a class="nav-link" href="#reports">Звіти</a></li>
+      <li><a class="nav-link" href="#hero">Головна</a></li>
+      <li><a class="nav-link" href="#features">Інструменти</a></li>
+      <li><a class="nav-link" href="#gallery">Галерея</a></li>
+      <li><a class="nav-link" href="#testimonials">Відгуки</a></li>
+      <li><a class="nav-link" href="#contact">Контакти</a></li>
     </ul>
   </nav>
 
@@ -61,15 +65,15 @@
     </div>
 
     <!-- Hero Section -->
-    <header class="hero reveal delay-2 neu" id="hero">
+    <header id="hero" class="hero reveal delay-2 neu">
       <div class="hero__image neu">
-        <img
+        <object
           id="site-logo"
           class="logo-sketch"
-          src="images/logo-light.svg"
-          data-light="images/logo-light.svg"
-          data-dark="images/logo-dark.svg"
-          alt="Sirko Club Logo">
+          type="image/svg+xml"
+          data="images/logo-light.svg"
+          aria-label="Sirko Club Logo">
+        </object>
       </div>
       <div class="hero__content">
         <h1 class="hero__title adaptive-text">Sirko Club — Собачий адмін</h1>
@@ -77,7 +81,7 @@
       </div>
     </header>
 
-    <!-- Main Content Placeholder -->
+    <!--Main placeholder-->
     <main>
       <!-- Ваш контент тут -->
     </main>
