--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
       </div>
       <div class="hero__content">
         <h1 class="hero__title adaptive-text">Sirko Club — Собачий адмін</h1>
-        <p class="hero__text adaptive-text">Усі інструменти для персоналу та адміністраторів в одному місці.</p>
+        <p class="hero__text adaptive-text">
+          Усі інструменти для персоналу та адміністраторів в одному місці.
+        </p>
       </div>
     </header>
 
@@ -85,6 +87,53 @@
     <main>
       <!-- ваш вміст тут -->
     </main>
+
+    <!-- Footer -->
+    <footer class="footer neu reveal delay-7">
+      <ul class="social-list">
+        <!-- Instagram -->
+        <li>
+          <a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
+            <svg width="32" height="32" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+              <rect width="64" height="64" rx="12" fill="var(--accent)" />
+              <circle cx="32" cy="32" r="14" fill="var(--text-color)" />
+              <circle cx="44" cy="20" r="4" fill="var(--text-color)" />
+            </svg>
+          </a>
+        </li>
+        <!-- TikTok -->
+        <li>
+          <a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
+            <svg width="32" height="32" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+              <rect width="64" height="64" rx="12" fill="var(--accent)" />
+              <path d="M38 20v20.5a7.5 7.5 0 1 1-7.5-7.5H38z" fill="var(--text-color)" />
+              <path d="M38 20h5v5h-5z" fill="var(--text-color)" />
+            </svg>
+          </a>
+        </li>
+        <!-- Telegram -->
+        <li>
+          <a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
+            <svg width="32" height="32" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+              <rect width="64" height="64" rx="12" fill="var(--accent)" />
+              <polygon points="16,48 32,32 48,48 28,28 44,20 20,36" fill="var(--text-color)" />
+            </svg>
+          </a>
+        </li>
+        <!-- YouTube -->
+        <li>
+          <a href="https://youtube.com" target="_blank" class="social-link neu" aria-label="YouTube">
+            <svg width="32" height="32" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+              <rect width="64" height="64" rx="12" fill="var(--accent)" />
+              <polygon points="26,20 46,32 26,44" fill="var(--text-color)" />
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <div class="footer-down adaptive-text">
+        <p>© 2025 Sirko Club. Всі права захищено.</p>
+      </div>
+    </footer>
   </div>
 
   <!-- App JS -->
