refactor(footer): increase top spacing and simplify social icons
- bump `.footer` margin-top from 4rem to 6rem for better layout balance
- replace Instagram, TikTok, Telegram and YouTube SVGs with streamlined 24×24 inline icons
- update SVG viewBox and element attributes (rect, circle, path, polygon) to match new designs

--- a/index.html
+++ b/index.html
@@ -94,38 +94,35 @@
         <!-- Instagram -->
         <li>
           <a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
-            <svg width="32" height="32" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-              <rect width="64" height="64" rx="12" fill="var(--accent)" />
-              <circle cx="32" cy="32" r="14" fill="var(--text-color)" />
-              <circle cx="44" cy="20" r="4" fill="var(--text-color)" />
+            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect x="2" y="2" width="20" height="20" rx="5" fill="var(--accent)"/>
+              <circle cx="12" cy="12" r="5" stroke="var(--text-color)" stroke-width="2"/>
+              <circle cx="17" cy="7" r="1.5" fill="var(--text-color)"/>
             </svg>
           </a>
         </li>
         <!-- TikTok -->
         <li>
           <a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
-            <svg width="32" height="32" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-              <rect width="64" height="64" rx="12" fill="var(--accent)" />
-              <path d="M38 20v20.5a7.5 7.5 0 1 1-7.5-7.5H38z" fill="var(--text-color)" />
-              <path d="M38 20h5v5h-5z" fill="var(--text-color)" />
+            <svg width="32" height="32" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 3v12.5a3.5 3.5 0 1 0 3.5  -3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z" fill="var(--text-color)"/>
             </svg>
           </a>
         </li>
         <!-- Telegram -->
         <li>
           <a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
-            <svg width="32" height="32" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-              <rect width="64" height="64" rx="12" fill="var(--accent)" />
-              <polygon points="16,48 32,32 48,48 28,28 44,20 20,36" fill="var(--text-color)" />
+            <svg width="32" height="32" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M4 12l16-6-6 16L10 14l-4-2z" fill="var(--text-color)"/>
             </svg>
           </a>
         </li>
         <!-- YouTube -->
         <li>
           <a href="https://youtube.com" target="_blank" class="social-link neu" aria-label="YouTube">
-            <svg width="32" height="32" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-              <rect width="64" height="64" rx="12" fill="var(--accent)" />
-              <polygon points="26,20 46,32 26,44" fill="var(--text-color)" />
+            <svg width="32" height="32" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <rect x="2" y="5" width="20" height="14" rx="2" fill="var(--accent)"/>
+              <polygon points="10,8 16,12 10,16" fill="var(--text-color)"/>
             </svg>
           </a>
         </li>
