style: introduce card-bg variable and apply to neu elements
- Add new `--card-bg` CSS variable for both light and dark themes
- Update `.neu` class to use `var(--card-bg)` instead of `var(--bg)`
- Normalize reset & base rules and ensure `html, body` are full-height flex containers
- Introduce `.page-wrapper` flex wrapper to push footer to bottom
- Apply `.neu` background & padding to `.nav-logo` and `.hero__image` in `index.html`
- Clean up whitespace and formatting in CSS
- Fix footer copyright punctuation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
   <!-- Desktop Navigation -->
   <nav class="desktop-nav neu">
-    <div class="nav-logo">
+    <!-- Додано neu, щоб логотип мав ті ж padding & shadow -->
+    <div class="nav-logo neu">
       <img
         id="nav-logo"
         class="nav-logo-img"
@@ -54,7 +55,6 @@
   <!-- Theme Toggle -->
   <button id="theme-toggle" class="dark-toggle neu" aria-label="Переключити тему">🌙</button>
 
-  <!-- Зробимо body флекс-контейнером -->
   <div class="page-wrapper">
     <div class="container">
       <!-- Pawprints -->
@@ -67,6 +67,7 @@
 
       <!-- Hero Section -->
       <header id="hero" class="hero neu reveal delay-2">
+        <!-- Додано neu, як і для соц-іконок -->
         <div class="hero__image neu">
           <img
             id="site-logo"
@@ -131,7 +132,7 @@
         </li>
       </ul>
       <div class="footer-down adaptive-text">
-        <p>© 2025 Sirko Club. Всі права захищено.</p>
+        <p>© 2025 Sirko Club. Всі права захищено。</p>
       </div>
     </footer>
   </div><!-- /.page-wrapper -->
