style: reorganize CSS sections, standardize formatting, and streamline social icons
- Add section headers (`=============== ... ===============`) for Variables, Dark Theme, Reset & Base, Wrapper, Neumorphic, Adaptive text, Layout, Desktop Nav, Mobile Burger & Nav, Theme Toggle, Hero, Pawprints, Footer
- Introduce new `--primary-light` variable and reorder `--card-bg` declaration
- Unify spacing, indentation, and property ordering across `css/app.css`
- Standardize shorthand (e.g. `margin: 0; padding: 0;`) and clamp formatting (e.g. `clamp(1rem, 2.5vw, 1.25rem)`)
- Collapse each social `<li>` in `index.html` to a single-line `<a><svg>…</svg></a>` for brevity
- Remove redundant comments and ensure consistent punctuation in footer text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body>
   <!-- Desktop Navigation -->
   <nav class="desktop-nav neu">
-    <!-- Додано neu, щоб логотип мав ті ж padding & shadow -->
     <div class="nav-logo neu">
       <img
         id="nav-logo"
@@ -25,7 +24,7 @@
         src="images/logo-light.svg"
         data-light="images/logo-light.svg"
         data-dark="images/logo-dark.svg"
-        alt="Sirko Club Logo Light"
+        alt="Sirko Club Logo"
       >
       <span class="nav-logo-text">Sirko Club</span>
     </div>
@@ -67,7 +66,6 @@
 
       <!-- Hero Section -->
       <header id="hero" class="hero neu reveal delay-2">
-        <!-- Додано neu, як і для соц-іконок -->
         <div class="hero__image neu">
           <img
             id="site-logo"
@@ -75,7 +73,7 @@
             src="images/logo-light.svg"
             data-light="images/logo-light.svg"
             data-dark="images/logo-dark.svg"
-            alt="Sirko Club Logo Light"
+            alt="Sirko Club Logo"
           >
         </div>
         <div class="hero__content">
@@ -95,44 +93,21 @@
     <!-- Footer -->
     <footer class="footer neu reveal delay-7">
       <ul class="social-list">
-        <!-- Instagram -->
-        <li>
-          <a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
-            <svg width="32" height="32" viewBox="0 0 24 24">
-              <rect x="2" y="2" width="20" height="20" rx="5" fill="var(--accent)"/>
-              <circle cx="12" cy="12" r="5" stroke="var(--text-color)" stroke-width="2"/>
-              <circle cx="17" cy="7" r="1.5" fill="var(--text-color)"/>
-            </svg>
-          </a>
-        </li>
-        <!-- TikTok -->
-        <li>
-          <a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
-            <svg width="32" height="32" viewBox="0 0 24 24">
-              <path d="M9 3v12.5a3.5 3.5 0 1 0 3.5-3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z" fill="var(--text-color)"/>
-            </svg>
-          </a>
-        </li>
-        <!-- Telegram -->
-        <li>
-          <a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
-            <svg width="32" height="32" viewBox="0 0 24 24">
-              <path d="M4 12l16-6-6 16L10 14l-4-2z" fill="var(--text-color)"/>
-            </svg>
-          </a>
-        </li>
-        <!-- YouTube -->
-        <li>
-          <a href="https://youtube.com" target="_blank" class="social-link neu" aria-label="YouTube">
-            <svg width="32" height="32" viewBox="0 0 24 24">
-              <rect x="2" y="5" width="20" height="14" rx="2" fill="var(--accent)"/>
-              <polygon points="10,8 16,12 10,16" fill="var(--text-color)"/>
-            </svg>
-          </a>
-        </li>
+        <li><a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
+          <svg width="32" height="32" viewBox="0 0 24 24"><rect x="2" y="2" width="20" height="20" rx="5" fill="var(--accent)"/><circle cx="12" cy="12" r="5" stroke="var(--text-color)" stroke-width="2"/><circle cx="17" cy="7" r="1.5" fill="var(--text-color)"/></svg>
+        </a></li>
+        <li><a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
+          <svg width="32" height="32" viewBox="0 0 24 24"><path d="M9 3v12.5a3.5 3.5 0 1 0 3.5-3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z" fill="var(--text-color)"/></svg>
+        </a></li>
+        <li><a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
+          <svg width="32" height="32" viewBox="0 0 24 24"><path d="M4 12l16-6-6 16L10 14l-4-2z" fill="var(--text-color)"/></svg>
+        </a></li>
+        <li><a href="https://youtube.com" target="_blank" class="social-link neu" aria-label="YouTube">
+          <svg width="32" height="32" viewBox="0 0 24 24"><rect x="2" y="5" width="20" height="14" rx="2" fill="var(--accent)"/><polygon points="10,8 16,12 10,16" fill="var(--text-color)"/></svg>
+        </a></li>
       </ul>
       <div class="footer-down adaptive-text">
-        <p>© 2025 Sirko Club. Всі права захищено。</p>
+        <p>© 2025 Sirko Club. Всі права захищено.</p>
       </div>
     </footer>
   </div><!-- /.page-wrapper -->
