--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
         </div>
       </header>
 
+      <!-- Animated wave divider -->
+      <div class="section-wave">
+        <svg viewBox="0 0 1440 60" preserveAspectRatio="none">
+          <path
+            d="M0,30 C360,60 1080,0 1440,30 L1440,60 L0,60 Z"
+            fill="var(--accent)"
+          />
+        </svg>
+      </div>
+
       <!-- Main placeholder -->
       <main>
         <!-- ваш вміст тут -->
