--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
   <!-- Desktop Navigation -->
   <nav class="desktop-nav neu">
     <div class="nav-logo neu">
-      <img id="nav-logo" class="nav-logo-img"
-           src="images/logo-light.svg"
-           data-light="images/logo-light.svg"
-           data-dark="images/logo-dark.svg"
-           alt="Sirko Club Logo">
+      <img
+        id="nav-logo"
+        class="nav-logo-img"
+        src="images/logo-light.svg"
+        data-light="images/logo-light.svg"
+        data-dark="images/logo-dark.svg"
+        alt="Sirko Club Logo"
+      >
       <span class="nav-logo-text">Sirko Club</span>
     </div>
     <ul class="nav-items">
@@ -62,11 +65,14 @@
       <!-- Hero Section -->
       <header id="hero" class="hero neu reveal delay-2">
         <div class="hero__image neu">
-          <img id="site-logo" class="logo-sketch"
-               src="images/logo-light.svg"
-               data-light="images/logo-light.svg"
-               data-dark="images/logo-dark.svg"
-               alt="Sirko Club Logo">
+          <img
+            id="site-logo"
+            class="logo-sketch"
+            src="images/logo-light.svg"
+            data-light="images/logo-light.svg"
+            data-dark="images/logo-dark.svg"
+            alt="Sirko Club Logo"
+          >
         </div>
         <div class="hero__content">
           <h1 class="hero__title adaptive-text">Sirko Club — Собачий адмін</h1>
@@ -88,7 +94,18 @@
     <!-- Footer -->
     <footer class="footer neu reveal delay-7">
       <ul class="social-list">
-        <!-- ...соціальні іконки... -->
+        <li><a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
+          <svg width="32" height="32" viewBox="0 0 24 24"><rect x="2" y="2" width="20" height="20" rx="5" fill="var(--accent)"/><circle cx="12" cy="12" r="5" stroke="var(--text-color)" stroke-width="2"/><circle cx="17" cy="7" r="1.5" fill="var(--text-color)"/></svg>
+        </a></li>
+        <li><a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
+          <svg width="32" height="32" viewBox="0 0 24 24"><path d="M9 3v12.5a3.5 3.5 0 1 0 3.5-3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z" fill="var(--text-color)"/></svg>
+        </a></li>
+        <li><a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
+          <svg width="32" height="32" viewBox="0 0 24 24"><path d="M4 12l16-6-6 16L10 14l-4-2z" fill="var(--text-color)"/></svg>
+        </a></li>
+        <li><a href="https://youtube.com" target="_blank" class="social-link neu" aria-label="YouTube">
+          <svg width="32" height="32" viewBox="0 0 24 24"><rect x="2" y="5" width="20" height="14" rx="2" fill="var(--accent)"/><polygon points="10,8 16,12 10,16" fill="var(--text-color)"/></svg>
+        </a></li>
       </ul>
       <div class="footer-down adaptive-text">
         <p>© 2025 Sirko Club. Всі права захищено.</p>
